# omnewrotate

./: ChangeLog  INSTALL  KNOWN_ISSUES  Makefile  Makefile.am  README  THANKS  TODO  autogen.sh  config.h.in  configure.ac  gen-src-archive.sh  rotate.c  test.c
data/: 11omnewrotate-suspend.in  89omnewrotate-resume.in  89omnewrotate.in  Makefile.am  omnewrotate.desktop.in  omnewrotate.in  omnewrotate.sh.in
src/: Makefile  Makefile.am  omnewrotate.c  omnewrotate.sh.in
